add bulk trainee

--- a/assets/antd-custom.less
+++ b/assets/antd-custom.less
@@ -1,4 +1,7 @@
-@primary-color: #298a40;
+@primary-color: #1A4B30;
+@success-color: #008751;
+@warning-color: #E6A23C;
+@error-color: #D73831;
 
 // @layout-header-height: 40px;
 @border-radius-base: 2px;
